--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,9 @@ repositories {
 
 
 dependencies {
+    compile('com.google.cloud:google-cloud-datastore:1.30.0')
+    compile('com.googlecode.objectify:objectify:6.0.1')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.jetbrains.kotlin:kotlin-reflect")
