--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ repositories {
 
 
 dependencies {
+    compile('org.jetbrains.kotlin:kotlin-reflect:1.2.70')
     compile('com.google.cloud:google-cloud-datastore:1.30.0')
     compile('com.googlecode.objectify:objectify:6.0.1')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
