--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,6 @@ repositories {
 
 
 dependencies {
-    compile('org.jetbrains.kotlin:kotlin-reflect:1.2.70')
     compile('com.google.cloud:google-cloud-datastore:1.30.0')
     compile('com.googlecode.objectify:objectify:6.0.1')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -52,4 +51,5 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-reflect")
     compile('org.springframework.boot:spring-boot-starter-test')
     compile('org.springframework.restdocs:spring-restdocs-mockmvc')
+    testCompile('com.nhaarman:mockito-kotlin:1.6.0')
 }
