--- a/build.gradle
+++ b/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-test')
     compile('org.springframework.restdocs:spring-restdocs-mockmvc')
     testCompile('com.nhaarman:mockito-kotlin:1.6.0')
+    testCompile('io.rest-assured:rest-assured:3.0.2')
 }
