--- a/build.gradle
+++ b/build.gradle
@@ -43,13 +43,15 @@ repositories {
 
 
 dependencies {
-    compile('org.jetbrains.kotlin:kotlin-reflect:1.2.70')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('com.google.cloud:google-cloud-datastore:1.30.0')
     compile('com.googlecode.objectify:objectify:6.0.1')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.jetbrains.kotlin:kotlin-reflect")
-    compile('org.springframework.boot:spring-boot-starter-test')
-    compile('org.springframework.restdocs:spring-restdocs-mockmvc')
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+    testCompile('com.nhaarman:mockito-kotlin:1.6.0')
+    testCompile('io.rest-assured:rest-assured:3.0.2')
 }
