--- a/build.gradle
+++ b/build.gradle
@@ -39,12 +39,18 @@ compileTestKotlin {
 
 repositories {
     mavenCentral()
+    maven {
+        url "http://repo.spring.io/libs-milestone"
+    }
 }
 
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.fasterxml.jackson.module:jackson-module-kotlin')
+    compile("org.springframework.cloud:spring-cloud-gcp-starter-pubsub:1.0.0.M3")
+    compile("org.springframework.integration:spring-integration-core")
     compile('com.google.cloud:google-cloud-datastore:1.30.0')
     compile('com.googlecode.objectify:objectify:6.0.1')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
