--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,8 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-reflect")
     compile("io.springfox:springfox-swagger2:2.9.2")
     compile("io.springfox:springfox-swagger-ui:2.9.2")
-
+    compile ('io.sentry:sentry-spring:1.7.10')
+    compile ('io.sentry:sentry-logback:1.7.13')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
