--- a/build.gradle
+++ b/build.gradle
@@ -46,22 +46,23 @@ repositories {
 
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('com.fasterxml.jackson.module:jackson-module-kotlin')
-    compile("org.springframework.cloud:spring-cloud-gcp-starter-pubsub:1.0.0.M3")
-    compile("org.springframework.integration:spring-integration-core")
-    compile('com.google.cloud:google-cloud-datastore:1.30.0')
-    compile('com.googlecode.objectify:objectify:6.0.1')
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    compile("org.jetbrains.kotlin:kotlin-reflect")
-    compile("io.springfox:springfox-swagger2:2.9.2")
-    compile("io.springfox:springfox-swagger-ui:2.9.2")
-    compile ('io.sentry:sentry-spring:1.7.10')
-    compile ('io.sentry:sentry-logback:1.7.13')
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+    implementation("org.springframework.cloud:spring-cloud-gcp-starter-pubsub:1.0.0.M3")
+    implementation("org.springframework.integration:spring-integration-core")
+    implementation("com.google.cloud:google-cloud-datastore:1.30.0")
+    implementation("com.googlecode.objectify:objectify:6.0.1")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("io.springfox:springfox-swagger2:2.9.2")
+    implementation("io.springfox:springfox-swagger-ui:2.9.2")
+    implementation("io.sentry:sentry-spring:1.7.10")
+    implementation("io.sentry:sentry-logback:1.7.13")
+    implementation("com.auth0:auth0-spring-security-api:1.1.0")
 
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
-    testCompile('com.nhaarman:mockito-kotlin:1.6.0')
-    testCompile('io.rest-assured:rest-assured:3.0.2')
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc")
+    testImplementation("com.nhaarman:mockito-kotlin:1.6.0")
+    testImplementation("io.rest-assured:rest-assured:3.0.2")
 }
